fix(mathjax): inline script vertical align

--- a/source/css/common/markdown.styl
+++ b/source/css/common/markdown.styl
@@ -223,6 +223,7 @@
 
   mjx-container
     display inline-block
+    vertical-align bottom
 
   mjx-container[display="true"]
     display flex !important
